fixup for visibility checkbox in user profile

--- a/calendar/public/stylesheets/user.css
+++ b/calendar/public/stylesheets/user.css
@@ -32,3 +32,7 @@ table .delete{
 table a:hover {
 	background-color: none;
 }
+
+#edit label.visibility {
+	width: auto;
+}
